# gamma-chess

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
crates/gamma_chess/: Cargo.toml
crates/gamma_chess/benches/: feature_build.rs
crates/gamma_chess/src/: lib.rs  model.rs
crates/gamma_chess_py/: Cargo.toml  build.rs
crates/gamma_chess_py/src/: lib.rs
crates/workflows/: Cargo.toml
crates/workflows/src/: build_proto.rs  consts.rs  copy_wrong.rs  create_index.rs  preprocess.rs  read_chunk.rs
data-loader/: Cargo.toml
data-loader/src/: lib.rs  loader.rs  model.rs
data-loader/src/proto/: _.rs
notebooks/: Untitled.ipynb  Untitled1.ipynb  dataset_inspect.ipynb  intro.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  dataset_inspect-checkpoint.ipynb  intro-checkpoint.ipynb
proto/: chess.proto  chess_pb2.py
src/: cnn.py  data.py  lib.rs  loader.py
src/.ipynb_checkpoints/: load-checkpoint.py
src/python/: model.rs
