[tool.poetry]
name = "gammax"
version = "0.1.0"
description = ""
authors = ["Nuno Boavida <45330362+nmboavida@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-chess = "^1.999"
jupyterlab = "^4.0.9"
torch = "^2.1.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
