[package]
name = "data-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pgn-reader = "0.25"
indicatif = "0.17"
rayon = "1.8"
prost = "0.12"
bytes = "1.5"
prost-build = "0.12"
shakmaty = "0.26"
tch = "0.14"