[package]
name = "gamma_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gamma_chess"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
pgn-reader = "0.25"
indicatif = "0.17"
rayon = "1.8"
prost = "0.12"
bytes = "1.5"
prost-build = "0.12"
shakmaty = "0.26"
tch = "0.14.0"
torch-sys = "0.14.0"
ndarray = { version = "0.15.6"}

[build-dependencies]
pyo3-build-config = "0.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]}

[[bench]]
name = "feature_build"
harness = false
