[package]
name = "workflows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "build_proto"
path = "src/build_proto.rs"

[[bin]]
name = "copy_wrong"
path = "src/copy_wrong.rs"

[[bin]]
name = "create_index"
path = "src/create_index.rs"

[[bin]]
name = "preprocess"
path = "src/preprocess.rs"

[[bin]]
name = "read_chunk"
path = "src/read_chunk.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamma_chess = { path = "../gamma_chess" }

anyhow = "1.0"
prost = "0.12"
prost-build = "0.12"
indicatif = "0.17"
rayon = "1.8"